TIME device done

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,6 +39,7 @@
         "Warn",
         "urlGet",
         "urlPut",
-        "numericArgument"
+        "numericArgument",
+        "stringArgumentRegEx"
     ]
 }
