--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,46 +1,19 @@
 {
     "Lua.diagnostics.globals": [
         "driver_label",
+        "driver_version",
         "driver_load_system_help",
         "driver_has_capture",
+        "driver_help",
         "driver_clear_discovered_resources_on_start",
-        "driver_version",
-        "stringArgument",
         "driver_channels",
         "resource_types",
-        "boolArgument",
-        "enumArgument",
-        "driver_extra_methods",
-        "tableToJson",
-        "Trace",
-        "jsonToTable",
-        "Error",
-        "setResourceState",
-        "readResource",
-        "AddDiscoveredResource",
-        "readAllResources",
-        "encBase64",
-        "loadExtraLib",
-        "onResourceAdd",
-        "onResourceUpdate",
-        "onResourceDelete",
-        "executeCommand",
         "requestResources",
-        "registerClient",
-        "channel",
-        "driver",
-        "fireEvent",
-        "tempGet",
-        "CUSTOM",
         "process",
-        "urlPost",
-        "driver_help",
-        "CONST",
-        "Warn",
-        "urlGet",
-        "urlPut",
-        "numericArgument",
-        "stringArgumentRegEx"
+        "executeCommand",
+        "onResourceDelete",
+        "onResourceUpdate",
+        "onResourceAdd"
     ],
     "cSpell.words": [
         "clockface",
